force-app/main/default/objects/Guard_Policy__mdt/Guard_Policy__mdt.object-meta.xml
<CustomObject>
    <description>Declarative policy configuration for AgentGuard action wrapping. Each record defines schema, access, rate, and rollback constraints for a single invocable action.</description>
    <label>Guard Policy</label>
    <pluralLabel>Guard Policies</pluralLabel>
</CustomObject>