force-app/main/default/objects/Guard_Policy__mdt/fields/AllowedPermissionSets__c.field-meta.xml
<CustomField>
    <fullName>AllowedPermissionSets__c</fullName>
    <label>Allowed Permission Sets</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Semicolon-separated list of Permission Set Names (DeveloperName) allowed to invoke the action. Empty = no additional permission set restriction.</description>
</CustomField>