force-app/main/default/objects/Guard_Policy__mdt/fields/AllowedProfiles__c.field-meta.xml
<CustomField>
    <fullName>AllowedProfiles__c</fullName>
    <label>Allowed Profiles</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Semicolon-separated list of Profile Names allowed to invoke the action. Empty = no additional profile restriction.</description>
</CustomField>