force-app/main/default/objects/Guard_Policy__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Master kill-switch. False (default) blocks every call to this policy.</description>
</CustomField>