force-app/main/default/objects/Guard_Policy__mdt/fields/MaxRecordsPerCall__c.field-meta.xml
<CustomField>
    <fullName>MaxRecordsPerCall__c</fullName>
    <label>Max Records Per Call</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <description>Maximum number of records that can be mutated in a single wrapped call. Zero blocks all calls.</description>
</CustomField>