force-app/main/default/objects/Guard_Policy__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>READ</fullName>
                <label>Read</label>
            </value>
            <value>
                <fullName>CREATE</fullName>
                <label>Create</label>
            </value>
            <value>
                <fullName>MODIFY</fullName>
                <label>Modify</label>
            </value>
            <value>
                <fullName>REMOVE</fullName>
                <label>Remove</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Data operation type: READ, CREATE, MODIFY, or REMOVE. Determines which CRUD/FLS checks AccessGate enforces.</description>
</CustomField>