force-app/main/default/objects/Guard_Policy__mdt/fields/RateLimitPerMinute__c.field-meta.xml
<CustomField>
    <fullName>RateLimitPerMinute__c</fullName>
    <label>Rate Limit Per Minute</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>10</defaultValue>
    <description>Maximum invocations allowed per rolling minute per user per action. Zero throttles all calls.</description>
</CustomField>