force-app/main/default/objects/Guard_Policy__mdt/fields/RateLimitWindowSeconds__c.field-meta.xml
<CustomField>
    <fullName>RateLimitWindowSeconds__c</fullName>
    <label>Rate Limit Window (Seconds)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>60</defaultValue>
    <description>Rolling window length in seconds for rate limiting. Clamped to [10, 3600]. Default 60.</description>
</CustomField>