force-app/main/default/objects/Guard_Policy__mdt/fields/SchemaContract__c.field-meta.xml
<CustomField>
    <fullName>SchemaContract__c</fullName>
    <label>Schema Contract</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>JSON schema contract defining allowed payload keys, types, and required fields. Consumed by SchemaValidator.</description>
</CustomField>