force-app/main/default/objects/Guard_Policy__mdt/fields/TargetSObjectType__c.field-meta.xml
<CustomField>
    <fullName>TargetSObjectType__c</fullName>
    <label>Target SObject Type</label>
    <type>Text</type>
    <length>80</length>
    <description>API name of the sObject the action mutates or reads (e.g., Account, Contact, Custom_Object__c).</description>
</CustomField>